# pdf2md

./: .gitignore  README.md  pdf2md.py  pyproject.toml  requirements.txt  setup.py
src/: converter.py  parser.py  pdf2md.py
src/formatters/: __init__.py  base.py  markdown.py
